tests/fixtures/invalid/dict_slice.py
# Dict does not support slice operation
x: dict[int, int] = {1: 2}
y: dict[int, int] = x[0:1]
